# book-management

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  openapi.json  pre-requisites.md  pyproject.toml  requirements.txt  swagger.md
app/: .env.test  alembic.ini  main.py  requirements.txt
app/api/v1/: routes.py
app/api/v1/books/: routes.py  utils.py
app/api/v1/books/tests/: test_routes.py  test_utils.py
app/api/v1/recommendations/: routes.py
app/api/v1/recommendations/tests/: test_routes.py
app/api/v1/summary/: routes.py  utils.py
app/api/v1/summary/tests/: test_routes.py  test_utils.py
app/core/: config.py  dependencies.py  exceptions.py  logger.py  responses.py  schemas.py
app/core/caching/: redis.py
app/core/database/: base.py  models.py
app/core/helpers/: db_helper.py
app/migrations/: env.py
app/migrations/versions/: c68d0bcbaead_initial_migration.py
